2003-10-21  Petr Mikulik  <mikulik@physics.muni.cz> 

	Changes allowing to save gnuplot session to a pipe, for example
	save "|cat >a.gp".

	* docs/gnuplot.doc: Documentation update.

        * src/command.c capture_filename_and_pfopen(): New routine, like
        CAPTURE_FILENAME_AND_FOPEN but with popen() in addition.

	* src/command.c save_command(): Reorganized.

        * save.c save_functions() save_variables() save_all() save_term():
	Reorganized.

2003-10-17  Petr Mikulik  <mikulik@physics.muni.cz> 

	* docs/old/README.os2: File removed. Information therein were already
	moved into appropriate places of gnuplot documentation long time ago.

2003-10-17  Petr Mikulik  <mikulik@physics.muni.cz> 

	* demo/animate.dem bivariat.dem borders.dem candlestics.dem discrete.dem
	fillcrvs.dem fillstyle.dem fontfile.dem fontfile_latex.dem hidden.dem
	mousevariables.dem multimsh.dem param.dem pm3d.dem pm3dcolors.dem
	pm3dgamma.dem poldat.dem random.dem scatter.dem steps.dem textcolor.dem
	textrotate.dem timedat.dem vector.dem: Added Id: tags and trailing reset
	command where missing.

2003-10-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.h src/gp_types.h: Moved enum of MODE_QUERY, MODE_PLOT, and
	MODE_SPLOT from mouse.h to gp_types.h to be available for non-mousing
	routines as well.

2003-10-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/graphics.c src/graph3d.c: Title of 'set key title' was not
	placed properly under simultaneous 'set key height'.

2003-10-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/tables.h src/tables.c: New routine lookup_table_nth.

2003-10-06  Ethan A Merritt <merritt@u.washington.edu>

	* axis.h: The recent (8 Sep) change to define NOOP as 0 caused
	gcc 3.2 -Wall to emit dozens of warning messages. Change this to
	#define NOOP ((void)0) instead.
	* interpol.c, plot2d.c: Remove extraneous redefinition of NOOP.

2003-10-06  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
